# simulatorPolynomial

./: CMakeLists.txt  LICENSE  README.md  main.cpp
graphNotebooks/: ChainSimulationAndFormulas.ipynb  TreeSimulationGraphs.ipynb  gridEffectivnessGraphs.ipynb
src/common/: edge.hpp
src/common/utils/: graphUtils.hpp  mathUtils.hpp  treeUtils.hpp
src/graphs/: universalGraph.cpp  universalGraph.hpp
src/graphs/trees/: generalTree.cpp  generalTree.hpp
src/simulation/: eventPoint.hpp  simulation.cpp  simulation.hpp
src/simulation/verification/: autoGridVerification.cpp  autoTreeVerification.cpp  baseGenerator.cpp  baseGenerator.hpp  chainGenerator.cpp  chainGenerator.hpp  chainSimulationResult.cpp  fullTreeGenerator.cpp  fullTreeGenerator.hpp  quadraticGridGenerator.cpp  quadraticGridGenerator.hpp  treeGenerator.cpp  treeGenerator.hpp  verificationFormulas.hpp
src/simulation/verification/timeMeasurements/: testChainTree.cpp  testFullTree.cpp  testQuadraticGrid.cpp  testRandomTree.cpp
test/: formulaSimulationTest.cpp  treeTest.cpp
testingData/: chainData.txt  chainIterationData.txt  fullTreeData.txt  gridEffectivnessData.txt  randomTreeData.txt
